@@ -1,3 +1,7 @@
+log_filter 7.x-1.x, 2013-05-25
+------------------------------
+* Implemented log details view.
+
 log_filter 7.x-1.x, 2013-05-12
 ------------------------------
 * Implemented log deletion.
